--- a/cssmenu/styles.css
+++ b/cssmenu/styles.css
@@ -216,12 +216,12 @@
   #cssmenu ul ul li a {
     padding: 20px 20px 20px 30px;
     font-size: 12px;
-    color: #000000;
+    color: #ffffff;
     background: none;
   }
   #cssmenu ul ul li:hover > a,
   #cssmenu ul ul li a:hover {
-    color: #000000;
+    color: #ffffff;
   }
   #cssmenu ul ul ul li a {
     padding-left: 40px;
@@ -244,7 +244,7 @@
   #cssmenu #menu-button {
     display: block;
     padding: 20px;
-    color: #000000;
+    color: #ffffff;
     cursor: pointer;
     font-size: 12px;
     text-transform: uppercase;
@@ -257,7 +257,7 @@
     display: block;
     width: 15px;
     height: 2px;
-    background: #000000;
+    background: #dddddd;
   }
   #cssmenu #menu-button::before {
     content: '';
@@ -267,8 +267,8 @@
     display: block;
     width: 15px;
     height: 3px;
-    border-top: 2px solid #000000;
-    border-bottom: 2px solid #000000;
+    border-top: 2px solid #dddddd;
+    border-bottom: 2px solid #dddddd;
   }
   #cssmenu .submenu-button {
     position: absolute;
@@ -289,7 +289,7 @@
     display: block;
     width: 1px;
     height: 11px;
-    background: #000000;
+    background: #dddddd;
     z-index: 99;
   }
   #cssmenu .submenu-button::before {
@@ -300,7 +300,7 @@
     display: block;
     width: 11px;
     height: 1px;
-    background: #000000;
+    background: #dddddd;
     z-index: 99;
   }
   #cssmenu .submenu-button.submenu-opened:after {
