--- a/cssmenu/styles.css
+++ b/cssmenu/styles.css
@@ -1,4 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+#cssmenu li:hover > ul {
+z-index: 9 !important;
+}
 #cssmenu,
 #cssmenu ul,
 #cssmenu ul li,
