--- a/cssmenu/styles.css
+++ b/cssmenu/styles.css
@@ -137,7 +137,7 @@ z-index: 9 !important;
   transition: height .2s ease;
 }
 #cssmenu ul li:hover > ul > li {
-  height: 32px;
+  height: auto;
 }
 #cssmenu ul ul li a {
   padding: 10px 20px;
